<resources>

    <!-- ### A P P ### -->
    <string name="app_name">My Finance Manager</string>
    <string name="app_name_long" translatable="false">Privacy Friendly Finance Manager</string>

    <!-- ### N A V _ B A R ###-->
    <string name="menu_title_dashboard">Dashboard</string>
    <string name="menu_title_repeating_transactions">Repeating Transactions</string>
    <string name="menu_title_accounts">Accounts</string>
    <string name="menu_title_tags">Tags</string>
    <string name="menu_title_categories">Categories</string>
    <string name="menu_title_statistics">Statistics</string>
    <string name="menu_title_person">Person</string>
    <string name="nav_drawer_toggle_open_desc">Open navigation drawer</string>
    <string name="nav_drawer_toggle_close_desc">Close navigation drawer</string>
    <string name="nav_drawer_nav_help_action">Help</string>
    <string name="nav_drawer_nav_about_action">About</string>
    <string name="nav_drawer_nav_tutorial_action">Tutorial</string>
    <string name="menu_title_settings">Settings</string>

    <!-- ### Menus ###-->
    <string name="menu_transaction_search">Search</string>
    <string name="menu_transaction_filter">Filter</string>
    <string name="menu_transaction_pint">Print</string>
    <string name="menu_home_tip">Tip</string>

    <!--### A B O U T ###-->
    <string name="activity_about_title">About</string>
    <string name="activity_about_version">Version v%s</string>
    <string name="activity_about_authors">Authors: </string>
    <string name="activity_about_authors_contributors">and contributors.</string>
    <string name="activity_about_affiliation">In affiliation with</string>
    <string name="activity_about_belongs">This application belongs to the group of Privacy Friendly Apps developed by Karlsruher Institute for Technology (KIT). Sourcecode licensed under GPLv3. Images copyright KIT and Google Inc.</string>
    <string name="activity_about_more_info">More information can be found on:</string>
    <string name="activity_about_github_link" translatable="false"><a href="https://github.com/SecUSo/privacy-friendly-finance-manager">Github-Repo</a></string>
    <string name="url" translatable="false"><a href="https://www.secuso.org/pfa">SECUSO-Website</a></string>

    <!--### T R A N S A C T I O N ###-->
    <string name="add_transaction">Add transaction</string>
    <string name="add_transaction_name_hint">Enter title</string>
    <string name="add_transaction_value_hint">Enter amount</string>
    <string name="add_transaction_note">Note(optional)</string>

    <!--### Account ###-->
    <string name="add_account">Add account</string>
    <string name="account_name">Account name</string>
    <string name="account_date">Date</string>
    <string name="account_amount">Initial amount</string>
    <string name="activity_account_beginning_month_suffix">at the beginning of this month</string>

    <!--### Category ###-->
    <string name="add_category">Add category</string>
    <string name="category_name">Category name</string>
    <string name="category_budget">Budget</string>
    <string name="this_month">This Month</string>

    <!--### TAG ###-->
    <string name="add_tag">Add tag</string>
    <string name="tag_name">Tag name</string>

    <!--### PERSON ###-->
    <string name="add_person">Add person</string>
    <string name="person_name">Person name</string>
    <string name="activity_persons_empty_list_label">No persons found</string>

    <!--### DIALOG ###-->
    <string name="from_date">From date</string>
    <string name="to_date">To date</string>
    <string name="select_time">Select a Time</string>

    <!--### H E L P ###-->
    <string-array name="activity_help_questions">
        <item>What is Privacy Friendly Finance Manager?</item>
        <item>How do I manage my income and expenses?</item>
        <item>How can I categorize my expenses?</item>
        <item>What makes the app privacy-friendly?</item>
        <item>Which permissions requires the app?</item>
        <item>How do i delete an entry i made?</item>
        <item>What are accounts for?</item>
    </string-array>
    <string-array name="activity_help_answers">
        <item>The Privacy Friendly Finance Manager is an app to monitor personal income and expenses.</item>
        <item>A financial transaction, either income or expense, can be added to your financial history by using the + button in the toolbar. The list of financial transactions appears in the navigation menu and can be called there. Items inside the transaction list can be edited and deleted.</item>
        <item>If you go to the menu item "Categories", you can create new categories. When creating a new transaction, you can assign a category to the transaction. The total balance of the categories are displayed under the menu item "Categories".</item>
        <item>Privacy Friendly App Finance Manager does not require any permission. It further does not include any tracking mechanisms or advertisement.</item>
        <item>Privacy Friendly App Finance Manager does not require any permission.</item>
        <item>Any entry in this app, may it be a transaction, a repeating transaction, an account or a category can be deleted by swiping the entry to the left or to the right and then clicking on the appearing red trash bin button.</item>
        <!-- <item>Accounts can be used to track the money you have in a real bank account in some bank. It is possible to change the balance of the beginning of the month so you don't have to add all the small expenses and incomes by hand. In the Account view you get an overview of all transactions you added to the corresponding account.</item>-->
    </string-array>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="title_activity_settings">SettingsActivity</string>
    <string name="none">none</string>
    <string name="home_tab_transactions">Transactions</string>
    <string name="home_tab_item">Items</string>
    <string name="home_tab_report">Report</string>
    <string name="trying_to_call_unknown">\"Trying to call unknown drawer item! Id: \"</string>
    <string name="expanse">Expense</string>
    <string name="income">Income</string>
    <string name="transfer">Transfer</string>
    <string name="transaction">Transaction</string>
    <string name="account">Account</string>
    <string name="category">Category</string>
    <string name="balance">Balance</string>
    <string name="transaction_list">Transactions list</string>
    <string name="edit">Edit</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="tag">Tag</string>
    <string name="sing_q">\?</string>
    <string name="error_enter_name">Please enter a name</string>
    <string name="saved">Saved</string>
    <string name="not_saved">Not saved</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="choose_color">Choose color</string>


</resources>